--- a/src/css/ncc.css
+++ b/src/css/ncc.css
@@ -3,8 +3,9 @@
     padding-bottom: 8rem;
 }
 .product-option.selected {
-    border: 1px solid #0068ad;
-    outline: 2px solid #0068ad;
+    /* border: 1px solid #0068ad; */
+    /* outline: 2px solid #0068ad; */
+    /* outline-offset: -3px; */
     margin-top: 0;
     margin-bottom: 2rem;
     padding-bottom: 8.2rem;
